--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,7 @@ PORT=5000
 # Example:
 # MONGO_URI=mongodb+srv://snacks_admin:myPassword123@cluster0.mongodb.net/snacks-factory?retryWrites=true&w=majority
 
-MONGO_URI=mongodb+srv://snacksAdmin:fsd123@cluster0.dqq6rzc.mongodb.net/?appName=Cluster0
+MONGO_URI=your_mongodb_connection_string_here
 
 # Node Environment
 NODE_ENV=development
